--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express-handlebars": "^6.0.6",
     "express-load": "^1.1.16",
     "handlebars": "^4.7.7",
+    "method-override": "^3.0.0",
     "mongoose": "^6.6.5",
     "mongoose-slug-generator": "^1.0.4",
     "node-sass": "^7.0.3",
