--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "handlebars": "^4.7.7",
     "method-override": "^3.0.0",
     "mongoose": "^6.6.5",
+    "mongoose-delete": "^0.5.4",
     "mongoose-slug-generator": "^1.0.4",
     "node-sass": "^7.0.3",
     "nodemon": "^2.0.20"
